force-app/main/default/objects/Work_Order_Payment__c/Work_Order_Payment__c.object-meta.xml
<CustomObject>
    <label>Work Order Payment</label>
    <nameField>
        <displayFormat>Payment - {0000}</displayFormat>
        <label>Work Order Payment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>