force-app/main/default/objects/Work_Order_Payment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>