force-app/main/default/objects/Work_Order_Payment__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <label>Payments</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Work Order Payments</relationshipLabel>
    <relationshipName>Work_Order_Payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>