force-app/main/default/objects/Work_Order_Payment__c/validationRules/Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &gt; (Work_Order__r.Estimation_Bill__c -  Work_Order__r.Total_Amount_Paid__c )</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount Should not be greater than Grand Total</errorMessage>
</ValidationRule>