force-app/main/default/objects/Work_Order_Payment__c/validationRules/Full_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Full_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( Work_Order__r.Total_Amount_Paid__c  ==   Work_Order__r.Estimation_Bill__c), true, false)</errorConditionFormula>
    <errorDisplayField>Payments__c</errorDisplayField>
    <errorMessage>Work Order Payment can&apos;t be created after full payment</errorMessage>
</ValidationRule>